--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>me.bajmo.kanbaniser.services</groupId>
-    <artifactId>Auth</artifactId>
+    <artifactId>auth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Auth</name>
     <description>Auth</description>
