--- a/Boards/src/main/resources/application.yml
+++ b/Boards/src/main/resources/application.yml
@@ -2,8 +2,11 @@ server:
   port: 8082
 
 spring:
+  cloud:
+    discovery:
+      enabled: true
   application:
-    name: BOARD-SERVICE
+    name: boards-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/kanbaniserdb?createDatabaseIfNotExist=true
@@ -13,8 +16,16 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  security:
+    user:
+      name: bajmo
+      password: 123456
 
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
+    fetch-registry: true
+    register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka
