--- a/EurekaServer/src/main/resources/application.yml
+++ b/EurekaServer/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
   port: 8761
 
+spring:
+  application:
+    name: eureka-server
+
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
   server:
     renewal-percent-threshold: 0.85
-
-logging:
-  level:
-    com.netflix.eureka: OFF
