--- a/Gateway/Dockerfile
+++ b/Gateway/Dockerfile
@@ -6,6 +6,6 @@ RUN mvn clean package
 
 FROM openjdk:17-jdk-alpine
 VOLUME /tmp
-ARG JAR_FILE=target/*.jar
+ARG JAR_FILE=*.jar
 COPY ${JAR_FILE} eureka-gateway.jar
 ENTRYPOINT ["java","-jar","/eureka-gateway.jar"]
